# pgvecto.rs

./: Cargo.toml
crates/base/src/: index.rs
crates/base/src/global/: mod.rs  svecf32_cos.rs  svecf32_dot.rs  svecf32_l2.rs  vecf16_cos.rs  vecf16_dot.rs  vecf16_l2.rs  vecf32_cos.rs  vecf32_dot.rs  vecf32_l2.rs
crates/base/src/operator/: bvecf32_cos.rs  bvecf32_dot.rs  bvecf32_jaccard.rs  bvecf32_l2.rs  mod.rs  svecf32_cos.rs  svecf32_dot.rs  svecf32_l2.rs  vecf16_cos.rs  vecf16_dot.rs  vecf16_l2.rs  vecf32_cos.rs  vecf32_dot.rs  vecf32_l2.rs  veci8_cos.rs  veci8_dot.rs  veci8_l2.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/hnsw/src/: hash_order.rs  lib.rs  nhq.rs
crates/index/: Cargo.toml
crates/index/src/: indexing.rs
crates/index/src/indexing/: nhq.rs
crates/nhq/: Cargo.toml
crates/nhq/src/: hash_order.rs  lib.rs
crates/service/: Cargo.toml
crates/service/src/algorithms/: hnsw.rs  mod.rs  nhq.rs
crates/service/src/index/indexing/: mod.rs
crates/service/src/utils/: mod.rs  visited_pool.rs
crates/stand-alone-test/: Cargo.toml
