[package]
name = "service"
version.workspace = true
edition.workspace = true

[dependencies]
arc-swap.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

base = { path = "../base" }
common = { path = "../common" }
index = { path = "../index" }
heapify = "0.2.0"
murmurhash3 = "0.0.5"

[lints]
workspace = true
